// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar Component NavBar renders 1`] = `
<div>
  <nav
    class="container"
  >
    <div
      class="brand"
    >
      <a
        href="redirection"
      >
        partial url
        <img
          alt="alt"
          class="brandLogo"
          src="logoSource"
        />
      </a>
    </div>
    <div
      class="itemsContainer"
    >
      <div
        class="itemsGroup"
      >
        <div
          class="item"
        >
          <div
            class="label"
          >
            button
          </div>
        </div>
      </div>
      <div
        class="itemsGroup"
      >
        <div
          class="container"
        >
          <input
            autocomplete="off"
            class="search"
            placeholder="placeholder"
            type="text"
          />
        </div>
        <div>
          <div>
            ControlleMenu
            closed
            has no ref
          </div>
        </div>
        <div
          class="item"
        >
          <i
            class="icon"
            icon="fal,icons"
          />
          <div
            class="label"
          >
            button
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`NavBar Component NavBar renders with variations 1`] = `
<div>
  <nav
    class="container"
  >
    <div
      class="brand"
    >
      <a
        href="/"
      >
        partial url
        <img
          alt="logo"
          class="brandLogo"
          src="logosource"
        />
      </a>
    </div>
    <div
      class="itemsContainer"
    >
      <div
        class="itemsGroup"
      >
        <div
          class="item"
        >
          <i
            class="icon"
            icon="fal,icons"
          />
          <div
            class="label"
          >
            button
          </div>
        </div>
      </div>
      <div
        class="itemsGroup"
      >
        <div
          class="item"
        >
          <div
            class="label"
          >
            button
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`NavBar Component NavBar renders without buttons or icons 1`] = `
<div>
  <nav
    class="container"
  >
    <div
      class="brand"
    >
      <a
        href="redirection"
      >
        partial url
        <img
          alt="alt"
          class="brandLogo"
          src="logoSource"
        />
      </a>
    </div>
    <div
      class="itemsContainer"
    >
      <div
        class="itemsGroup"
      />
      <div
        class="itemsGroup"
      />
    </div>
  </nav>
</div>
`;
